Test LSTM op avec metrique accuracy 0.5369 minable

--- a/tests_neural_network.ipynb
+++ b/tests_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "3825"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "'# 1. Préparation des données\\n\\nX = features.values\\ny = target.values\\n\\nwindow_size = 1000 # Vous pouvez ajuster cette valeur selon vos besoins\\n\\n# 2. Construction du modèle\\n\\nmodel = keras.Sequential([\\n    layers.InputLayer(input_shape=(X.shape[1],)),\\n    layers.Dense(64, activation=\\'relu\\'),\\n    layers.Dense(32, activation=\\'relu\\'),\\n    layers.Dense(1, activation=\\'sigmoid\\')\\n])\\n\\nmodel.compile(optimizer=\\'adam\\', loss=\\'binary_crossentropy\\', metrics=[\\'accuracy\\'])\\n\\n# 3. Entraînement du modèle avec validation walk-forward\\n\\nfor i in range(window_size, len(X) - 1):\\n    # Séparation des données en ensembles d\\'entraînement et de test\\n    X_train = X[i-window_size:i]\\n    y_train = y[i-window_size:i]\\n    X_test = X[i:i+1]\\n    y_test = y[i:i+1]\\n\\n    # Normalisation des caractéristiques\\n    scaler = StandardScaler()\\n    X_train = scaler.fit_transform(X_train)\\n    X_test = scaler.transform(X_test)\\n\\n    # Entraînement du modèle\\n    model.fit(X_train, y_train, epochs=10, verbose=0)  # Vous pouvez ajuster le nombre d\\'epochs selon vos besoins\\n\\n    # Évaluation du modèle (optionnel)\\n    loss, accuracy = model.evaluate(X_test, y_test, verbose=0)\\n    print(f\"Step {i}, Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "'\\n# Préparation des données\\n\\nX = features.values\\ny = target.values\\n\\nwindow_size = 2000  \\nn_days = 30 \\n\\n# Construction du modèle\\n\\nmodel = keras.Sequential([\\n    layers.InputLayer(input_shape=(X.shape[1],)),\\n    layers.Dense(64, activation=\\'relu\\'),\\n    layers.Dense(32, activation=\\'relu\\'),\\n    layers.Dense(1, activation=\\'sigmoid\\')\\n])\\n\\nmodel.compile(optimizer=\\'adam\\', loss=\\'binary_crossentropy\\')\\n\\n# Entraînement du modèle avec validation walk-forward\\n\\npredicted_probs = []\\nprogressions = []\\nmetrics = []\\n\\nfor i in range(window_size, len(X) - 1 - n_days):\\n    # Séparation des données\\n    X_train = X[i-window_size:i]\\n    y_train = y[i-window_size:i]\\n    X_test = X[i:i+n_days]\\n    y_test = y[i:i+n_days]\\n\\n    # Normalisation\\n    scaler = StandardScaler()\\n    X_train = scaler.fit_transform(X_train)\\n    X_test = scaler.transform(X_test)\\n\\n    with HiddenPrints():\\n        # Entraînement\\n        model.fit(X_train, y_train, epochs=20, verbose=0)\\n\\n        # Prédiction\\n        predicted_prob = model.predict(X_test).flatten()\\n        predicted_probs.extend(predicted_prob)\\n\\n    # Récupérer la progression réelle\\n    progression = data_crop.iloc[i:i+n_days][\\'progression tomorrow\\'].values + 1\\n    progressions.extend(progression)\\n\\n    # Calcul de la métrique personnalisée\\n    if len(predicted_probs) >= n_days:\\n        metric_value = earn_metric(predicted_probs, progressions, n_days)\\n        metrics.append(metric_value)\\n        #print(f\"Step {i}, Earn Metric: {metric_value:.4f}\")\\n\\nprint(f\"Average Earn Metric: {np.mean(metrics):.4f}\")'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "'import numpy as np\\nfrom tensorflow import keras\\nfrom tensorflow.keras import layers\\nfrom sklearn.preprocessing import StandardScaler\\n\\n# Préparation des données\\n\\nX = features.values\\ny = target.values\\n\\nwindow_size = 3000  \\nn_days = 30 \\n\\n# Construction du modèle LSTM\\n\\nmodel = keras.Sequential([\\n    layers.InputLayer(input_shape=(X.shape[1], 1)),  # Les LSTM attendent une entrée tridimensionnelle (batch_size, timesteps, features)\\n    layers.LSTM(64, return_sequences=True),  # Retourne une séquence à la couche suivante\\n    layers.LSTM(32),  # Retourne la dernière sortie de la séquence\\n    layers.Dense(1, activation=\\'sigmoid\\')\\n])\\n\\nmodel.compile(optimizer=\\'adam\\', loss=\\'binary_crossentropy\\')\\n\\n# Entraînement du modèle avec validation walk-forward\\n\\npredicted_probs = []\\nprogressions = []\\nmetrics = []\\n\\nfor i in range(window_size, len(X) - 1 - n_days):\\n    # Séparation des données\\n    X_train = X[i-window_size:i]\\n    y_train = y[i-window_size:i]\\n    X_test = X[i:i+n_days]\\n    y_test = y[i:i+n_days]\\n\\n    # Normalisation\\n    scaler = StandardScaler()\\n    X_train = scaler.fit_transform(X_train)\\n    X_test = scaler.transform(X_test)\\n\\n    # Les LSTM attendent une entrée tridimensionnelle, donc nous devons remodeler les données\\n    X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)\\n    X_test = X_test.reshape(X_test.shape[0], X_test.shape[1], 1)\\n\\n    with HiddenPrints():\\n        # Entraînement\\n        model.fit(X_train, y_train, epochs=10, verbose=0)\\n\\n        # Prédiction\\n        predicted_prob = model.predict(X_test).flatten()\\n        predicted_probs.extend(predicted_prob)\\n\\n    # Récupérer la progression réelle\\n    progression = data_crop.iloc[i:i+n_days][\\'progression tomorrow\\'].values + 1\\n    progressions.extend(progression)\\n\\n    # Calcul de la métrique personnalisée\\n    if len(predicted_probs) >= n_days:\\n        metric_value = earn_metric(predicted_probs, progressions, n_days)\\n        metrics.append(metric_value)\\n\\nprint(f\"Average Earn Metric: {np.mean(metrics):.4f}\")'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,65 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras.wrappers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\thoma\\Desktop\\Code\\tradebtcai\\tests_neural_network.ipynb Cellule 20\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/thoma/Desktop/Code/tradebtcai/tests_neural_network.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwrappers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mscikit_learn\u001b[39;00m \u001b[39mimport\u001b[39;00m KerasClassifier\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/thoma/Desktop/Code/tradebtcai/tests_neural_network.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomizedSearchCV\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/thoma/Desktop/Code/tradebtcai/tests_neural_network.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moptimizers\u001b[39;00m \u001b[39mimport\u001b[39;00m Adam\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras.wrappers'"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from keras.optimizers import Adam\n",
-    "\n",
-    "\n",
-    "def create_model(learning_rate=0.001, dropout_rate=0.0, lstm_units=64):\n",
-    "    model = keras.Sequential([\n",
-    "        layers.InputLayer(input_shape=(X.shape[1], 1)),\n",
-    "        layers.LSTM(lstm_units, return_sequences=True, dropout=dropout_rate),\n",
-    "        layers.LSTM(int(lstm_units/2), dropout=dropout_rate),\n",
-    "        layers.Dense(1, activation='sigmoid')\n",
-    "    ])\n",
-    "    optimizer = Adam(learning_rate=learning_rate)\n",
-    "    model.compile(optimizer=osptimizer, loss='binary_crossentropy')\n",
-    "    return model\n",
-    "\n",
-    "model = KerasClassifier(build_fn=create_model, epochs=10, batch_size=32, verbose=0)\n",
-    "\n",
-    "param_dist = {\n",
-    "    'learning_rate': [0.001, 0.01, 0.1],\n",
-    "    'dropout_rate': [0.0, 0.1, 0.2, 0.3],\n",
-    "    'lstm_units': [32, 64, 128]\n",
-    "}\n",
-    "\n",
-    "random_search = RandomizedSearchCV(estimator=model, param_distributions=param_dist, n_iter=10, cv=3, verbose=2, n_jobs=-1)\n",
-    "random_search_result = random_search.fit(X, y)\n",
-    "\n",
-    "print(\"Meilleur: %f avec %s\" % (random_search_result.best_score_, random_search_result.best_params_))\n",
-    "\"\"\""
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best metric: 1.0393\n",
-      "Best hyperparameters: {'learning_rate': 0.001, 'lstm_units': 32}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"1000 minutes d'exec\\nBest metric: 1.0393\\nBest hyperparameters: {'learning_rate': 0.001, 'lstm_units': 32}\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -543,6 +503,222 @@
     "Best metric: 1.0393\n",
     "Best hyperparameters: {'learning_rate': 0.001, 'lstm_units': 32}\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5369\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"import numpy as np\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "# Préparation des données\n",
+    "\n",
+    "X = features.values\n",
+    "y = target.values\n",
+    "\n",
+    "window_size = 3000  \n",
+    "n_days = 30 \n",
+    "\n",
+    "# Construction du modèle LSTM avec les hyperparamètres sélectionnés\n",
+    "\n",
+    "model = keras.Sequential([\n",
+    "    layers.InputLayer(input_shape=(X.shape[1], 1)),  # Les LSTM attendent une entrée tridimensionnelle\n",
+    "    layers.LSTM(32, return_sequences=True),  # Utilisation de 32 unités comme déterminé par la recherche d'hyperparamètres\n",
+    "    layers.LSTM(32),\n",
+    "    layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Définir l'early stopping\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "\n",
+    "# Entraînement du modèle avec validation walk-forward et early stopping\n",
+    "predicted_probs = []\n",
+    "progressions = []\n",
+    "predicted_labels = []\n",
+    "true_labels = []\n",
+    "\n",
+    "\n",
+    "for i in range(window_size, len(X) - 1 - n_days):\n",
+    "    # Séparation des données\n",
+    "    X_train = X[i-window_size:i]\n",
+    "    y_train = y[i-window_size:i]\n",
+    "    X_test = X[i:i+n_days]\n",
+    "    y_test = y[i:i+n_days]\n",
+    "\n",
+    "    # Normalisation\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train = scaler.fit_transform(X_train)\n",
+    "    X_test = scaler.transform(X_test)\n",
+    "\n",
+    "    # Les LSTM attendent une entrée tridimensionnelle, donc nous devons remodeler les données\n",
+    "    X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
+    "    X_test = X_test.reshape(X_test.shape[0], X_test.shape[1], 1)\n",
+    "\n",
+    "    with HiddenPrints():\n",
+    "        # Entraînement\n",
+    "        model.fit(X_train, y_train, epochs=30, verbose=0, validation_data=(X_test, y_test), callbacks=[early_stopping])\n",
+    "\n",
+    "        # Prédiction\n",
+    "        predicted_prob = model.predict(X_test).flatten()\n",
+    "        predicted_label = [1 if prob > 0.5 else 0 for prob in predicted_prob]\n",
+    "        predicted_labels.extend(predicted_label)\n",
+    "        true_labels.extend(y_test)\n",
+    "\n",
+    "# Calcul de l'accuracy\n",
+    "accuracy = accuracy_score(true_labels, predicted_labels)\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\"\"\"\n",
+    "\n",
+    "\"Accuracy 0.5369\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
