Retour sur un LSTM après compréhension et premiers essais avec un tscv split, 3 minutes d'entraînement pour un f1-score de 0.64

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from xgboost import XGBClassifier\n",
     "import warnings\n",
@@ -599,6 +599,46 @@
     "      # Évaluer le modèle\n",
     "      accuracy = accuracy_score(actuals, predictions)\n",
     "      print(f'Model Accuracy: {accuracy * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model_f1(data, model, features, target, window_size):\n",
+    "      \n",
+    "      # Initialiser les listes pour stocker les prédictions et les vraies valeurs\n",
+    "      predictions = []\n",
+    "      actuals = []\n",
+    "\n",
+    "      # Boucle à travers les données de la taille de la fenêtre jusqu'à la fin des données\n",
+    "      for i in range(window_size, len(data) - 1):\n",
+    "            # Diviser les données en ensembles d'entraînement et de test\n",
+    "            X_train = features.iloc[i-window_size:i, :]\n",
+    "            y_train = target.iloc[i-window_size:i]\n",
+    "            X_test = features.iloc[i:i+1, :]\n",
+    "            y_test = target.iloc[i]\n",
+    "\n",
+    "            #Normaliser les données\n",
+    "            scaler = StandardScaler()\n",
+    "            X_train = scaler.fit_transform(X_train)\n",
+    "            X_test = scaler.transform(X_test)\n",
+    "            \n",
+    "            # Entraîner un modèle\n",
+    "            model.fit(X_train, y_train)\n",
+    "            \n",
+    "            # Faire une prédiction\n",
+    "            prediction = model.predict(X_test)[0]\n",
+    "            \n",
+    "            # Stocker les prédictions et les vraies valeurs\n",
+    "            predictions.append(prediction)\n",
+    "            actuals.append(y_test)\n",
+    "\n",
+    "      # Évaluer le modèle\n",
+    "      score = f1_score(actuals, predictions)\n",
+    "      print(f'Model Accuracy: {score * 100:.2f}%')"
    ]
   },
   {
@@ -1218,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1276,10 +1316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Accuracy: 68.91%\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model_f1(data_crop, dummy_model, features, target, window_size)"
+   ]
   },
   {
    "cell_type": "code",
