--- a/tests.ipynb
+++ b/tests.ipynb
@@ -1345,13 +1345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params_xgb = {'colsample_bytree': 1.0, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}\n",
-    "\n",
-    "xgboost = XGBClassifier(**best_params_xgb, random_state = 42)"
+    "xgboost = XGBClassifier(**best_params_xgb, random_state = 7)"
    ]
   },
   {
@@ -1441,24 +1439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_params_xgb = {'colsample_bytree': 0.8, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 100, 'subsample': 0.8}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Accuracy: 52.02%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_model(data_crop, xgboost, features, target, window_size)"
    ]
