Nouveaux essais peu concluants sur LSTM et XGB, accuracy tombée en dessous de baseline sans raison apparente...

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,19 +1015,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Définir la grille de paramètres\n",
     "param_grid = {\n",
-    "    'penalty': ['l1', 'l2', 'elasticnet', 'none'],\n",
-    "    'C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
-    "    'solver': ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga'],\n",
-    "    'max_iter': [50, 100, 200, 500],\n",
-    "    'fit_intercept': [True, False],\n",
-    "    'class_weight': [None, 'balanced'],\n",
-    "    'l1_ratio': [0.1, 0.3, 0.5, 0.7, 0.9]\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'C': [0.01, 0.1, 1, 10],\n",
+    "    'solver': ['lbfgs', 'liblinear'],\n",
+    "    'max_iter': [200],\n",
+    "    'fit_intercept': [True],\n",
+    "    'class_weight': [None, 'balanced']\n",
     "}"
    ]
   },
@@ -1048,31 +1047,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'from sklearn.model_selection import ParameterGrid\\nfrom sklearn.linear_model import LogisticRegression\\nfrom sklearn.preprocessing import StandardScaler\\nfrom sklearn.metrics import accuracy_score\\nwarnings.filterwarnings(\\'ignore\\', category=FutureWarning, module=\\'sklearn\\')\\nfrom IPython.display import display, HTML\\n\\n\\n# Créer une liste de combinaisons de paramètres\\ngrid_list = list(ParameterGrid(param_grid_xgb_reduced))\\n\\n# Pour boucler sur chaque combinaison :\\nbest_accuracy = 0\\nbest_params = None\\n\\nfor params in grid_list:\\n    try:\\n        # Instancier le modèle avec les paramètres\\n        model_instance = XGBClassifier(**params)\\n        \\n        # Appliquer la fonction train_model\\n        accuracy = train_model_grid(data, model_instance, features, target, window_size)\\n        \\n        # Si le modèle actuel a une meilleure précision que le précédent meilleur modèle, stocker sa précision et ses paramètres\\n        if accuracy > best_accuracy:\\n            best_accuracy = accuracy\\n            best_params = params\\n            print(f\"Nouveaux meilleurs paramètres trouvés : {params}, accuracy : {accuracy}\")\\n\\n        \\n            \\n    except Exception as e:\\n        # Gérer les combinaisons de paramètres non compatibles\\n        error_message = f\"Error with parameters {params}: {e}\"\\n        #display(HTML(f\"<small>{error_message}</small>\"))\\n        #pass\\n\\nprint(f\"Best Model Accuracy: {best_accuracy * 100:.2f}%\")\\nprint(f\"Best Parameters: {best_params}\")\\n'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Model Accuracy: 0.00%\n",
+      "Best Parameters: None\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"from sklearn.model_selection import ParameterGrid\n",
+    "from sklearn.model_selection import ParameterGrid\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
     "warnings.filterwarnings('ignore', category=FutureWarning, module='sklearn')\n",
+    "warnings.filterwarnings('ignore', category=UserWarning, module='sklearn')\n",
     "from IPython.display import display, HTML\n",
     "\n",
     "\n",
     "# Créer une liste de combinaisons de paramètres\n",
-    "grid_list = list(ParameterGrid(param_grid_xgb_reduced))\n",
+    "grid_list = list(ParameterGrid(param_grid))\n",
     "\n",
     "# Pour boucler sur chaque combinaison :\n",
     "best_accuracy = 0\n",
@@ -1081,7 +1079,7 @@
     "for params in grid_list:\n",
     "    try:\n",
     "        # Instancier le modèle avec les paramètres\n",
-    "        model_instance = XGBClassifier(**params)\n",
+    "        model_instance = LogisticRegression(**params)\n",
     "        \n",
     "        # Appliquer la fonction train_model\n",
     "        accuracy = train_model_grid(data, model_instance, features, target, window_size)\n",
@@ -1101,13 +1099,12 @@
     "        #pass\n",
     "\n",
     "print(f\"Best Model Accuracy: {best_accuracy * 100:.2f}%\")\n",
-    "print(f\"Best Parameters: {best_params}\")\n",
-    "\"\"\""
+    "print(f\"Best Parameters: {best_params}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1116,12 +1113,14 @@
        "\"Best Model Accuracy: 60.57%\\nBest Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#XGBoost\n",
+    "\n",
     "\"\"\"Best Model Accuracy: 60.57%\n",
     "Best Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}\"\"\""
    ]
@@ -1450,7 +1449,15 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Accuracy: 52.16%\n"
+     ]
+    }
+   ],
    "source": [
     "train_model(data_crop, xgboost, features, target, window_size)"
    ]
