--- a/tests.ipynb
+++ b/tests.ipynb
@@ -1226,7 +1226,10 @@
       "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 200, 'subsample': 1.0}, accuracy : 0.5874183006535948\"\n",
       "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 100, 'subsample': 0.8}, accuracy : 0.5999455337690632\"\n",
       "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 100, 'subsample': 1.0}, accuracy : 0.5885076252723311\"\n",
-      "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}, accuracy : 0.6015795206971678\"\n"
+      "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}, accuracy : 0.6015795206971678\"\n",
+      "Trop nul la honte : {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 200, 'subsample': 1.0}, accuracy : 0.5841503267973857\"\n",
+      "Best Model Accuracy: 60.56645%\n",
+      "Best Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}\n"
      ]
     }
    ],
@@ -1294,7 +1297,7 @@
    "source": [
     "#XGBoost\n",
     "\n",
-    "\"\"\"Best Model Accuracy: 60.57%\n",
+    "\"\"\"Best Model Accuracy: 60.56645%\n",
     "Best Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.01, 'max_depth': 5, 'n_estimators': 200, 'subsample': 0.8}\"\"\""
    ]
   },
