rangement des notebooks, enregistrement de tous les xgb et récup dans le script avant de faire une rétro simu

--- a/notebooks/tests.ipynb
+++ b/notebooks/tests.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/btc_data.csv', index_col=0)"
+    "data = pd.read_csv('../data/btc_data.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[4700 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1315,7 @@
     "import pickle\n",
     "\n",
     "# Sauvegardez le modèle dans un fichier\n",
-    "filename = 'models/xgboost_model.pkl'\n",
+    "filename = '../models/xgboost_model.pkl'\n",
     "pickle.dump(xgboost, open(filename, 'wb'))"
    ]
   },
@@ -1571,7 +1571,7 @@
     "import pickle\n",
     "\n",
     "# Sauvegardez le modèle dans un fichier\n",
-    "filename = 'models/xgboost_model.pkl'\n",
+    "filename = '../models/xgboost_model.pkl'\n",
     "pickle.dump(xgboost, open(filename, 'wb'))"
    ]
   },
