réentraînement de xgb avec de biens meilleurs résultats

--- a/notebooks/training_xgboost.ipynb
+++ b/notebooks/training_xgboost.ipynb
@@ -86,17 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def earn_metric(predicted_probs, progressions, n_days, i):\n",
-    "      base = c = 1\n",
-    "      for j in range(n_days):\n",
-    "            index = len(predicted_probs) - n_days + j\n",
-    "            c *= predicted_probs[index] * progressions[index] + (1 - predicted_probs[index])\n",
-    "            base *= progressions[index]\n",
-    "      return c / base\n",
+    "def earn_metric(predicted_probs, progressions, n_days, current_index):\n",
+    "    # Assurer qu'il y a assez de données pour calculer la métrique\n",
+    "    if current_index < n_days - 1:\n",
+    "        return None\n",
+    "\n",
+    "    base = c = 1\n",
+    "    for j in range(current_index - n_days + 1, current_index + 1):\n",
+    "        c *= predicted_probs[j] * progressions[j] + (1 - predicted_probs[j])\n",
+    "        base *= progressions[j]\n",
+    "    return c / base\n",
+    "\n",
     "\n",
     "\n",
     "def train_model_proba_metric_save(data, model, features, target, window_size, n_days):\n",
@@ -183,6 +187,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_cumulative_model(data, model, features, target, window_size, test_size, n_days):\n",
+    "    # Initialiser les listes pour stocker les scores de performance\n",
+    "    performance_scores = []\n",
+    "\n",
+    "    # StandardScaler pour normaliser les features\n",
+    "    scaler = StandardScaler()\n",
+    "\n",
+    "    # Initialiser l'ensemble d'entraînement\n",
+    "    X_train = features.iloc[:window_size, :]\n",
+    "    y_train = target.iloc[:window_size]\n",
+    "\n",
+    "    # Listes pour stocker toutes les prédictions et progressions\n",
+    "    all_predictions = []\n",
+    "    all_progressions = []\n",
+    "\n",
+    "    # Boucle à travers les données, en augmentant la taille de l'ensemble d'entraînement à chaque itération\n",
+    "    for i in range(window_size, len(data) - test_size):\n",
+    "        # Diviser les données en ensembles d'entraînement et de test\n",
+    "        X_test = features.iloc[i:i + test_size, :]\n",
+    "        y_test = target.iloc[i:i + test_size]\n",
+    "\n",
+    "        # Normaliser les données\n",
+    "        X_train_scaled = scaler.fit_transform(X_train)\n",
+    "        X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "        # Entraîner le modèle\n",
+    "        model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "        # Faire des prédictions sur le jeu de test\n",
+    "        prediction = model.predict(X_test_scaled)[0]  # Prédiction pour un seul jour\n",
+    "        progression = data.iloc[i]['progression tomorrow'] + 1\n",
+    "\n",
+    "        all_predictions.append(prediction)\n",
+    "        all_progressions.append(progression)\n",
+    "\n",
+    "        # Appliquer la métrique si on a suffisamment de données\n",
+    "        if i >= window_size + n_days - 1:\n",
+    "            score = earn_metric(all_predictions, all_progressions, n_days, i - window_size)\n",
+    "            if score is not None:\n",
+    "                performance_scores.append(score)\n",
+    "\n",
+    "        # Ajouter de nouvelles données à l'ensemble d'entraînement pour la prochaine itération\n",
+    "        X_train = features.iloc[:i + test_size, :]\n",
+    "        y_train = target.iloc[:i + test_size]\n",
+    "\n",
+    "    # Calculer la performance moyenne\n",
+    "    average_performance = np.mean(performance_scores)\n",
+    "\n",
+    "    # Sauvegarder le modèle et le scaler final\n",
+    "    pickle.dump(model, open('../models/final_model.pkl', 'wb'))\n",
+    "    pickle.dump(scaler, open('../scalers/final_scaler.pkl', 'wb'))\n",
+    "\n",
+    "    return average_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -190,7 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +270,13 @@
     "features = data.drop(columns=['progression tomorrow', 'target', 'close', 'high', 'low', 'volumefrom', 'market_cap', 'difficulty']).iloc[:-1, :]\n",
     "target = data['target'].iloc[:-1]\n",
     "window_size = 1500\n",
+    "test_size = 1\n",
     "n_days = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +284,33 @@
     "\n",
     "xgboost = XGBClassifier(**best_params_xgb, random_state = 42)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.003973437273559"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_cumulative_model(data, xgboost, features, target, window_size, test_size, n_days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
